# SurgiView-Image-Tracker

./: .gitignore  CMakeLists.txt  README.md  run.ps1
.github/workflows/: ci.yml
docs/demo/: evaluator-guide.md  github-metadata.md  github-release-description.md  portfolio-summary.md  release-note-v1.md  requirements-checklist.md  walkthrough.md
docs/safety/: README.md  hazard-analysis.md  release-checklist.md  traceability-matrix.csv  verification-protocol.md
qml/: Main.qml
sample-data/: demo_session.json
sample-data/demo_ct_series/: slice_001.dcm  slice_002.dcm  slice_003.dcm
scripts/: package_demo_bundle.ps1  send_demo_telemetry.py  start_demo.ps1
src/: main.cpp
src/app/: FrameImageProvider.cpp  FrameImageProvider.h  SurgiViewController.cpp  SurgiViewController.h
src/imaging/: DicomDecoder.cpp  DicomDecoder.h  DicomSeriesLoader.cpp  DicomSeriesLoader.h
src/measurement/: DepthMeasurement.cpp  DepthMeasurement.h
src/models/: Types.h
src/recording/: PlaybackRecorder.cpp  PlaybackRecorder.h
src/tracking/: InstrumentTracker.cpp  InstrumentTracker.h  SerialTelemetryDevice.cpp  SerialTelemetryDevice.h  TcpTelemetryServer.cpp  TcpTelemetryServer.h  TelemetryJsonCodec.cpp  TelemetryJsonCodec.h  TrackingPoseSource.cpp  TrackingPoseSource.h
tests/: test_depthmeasurement.cpp  test_dicomdecoder.cpp  test_tcptelemetryserver.cpp  test_telemetryjsoncodec.cpp  test_tracker.cpp
